# loopwright

./: .gitignore  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  release.yml
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: api.ts  main.ts  settings.ts  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: engine.rs  lib.rs  main.rs  repo.rs  secrets.rs
scripts/: build-sidecar.mjs
src/: config.ts  demo.ts  run.ts  session.ts  trace.ts
src/adapters/: agents.ts  mocks.ts  prompts.ts  roleBindings.ts  runnerRoles.ts
src/domain/: stateMachine.ts
src/engine/: criticParser.ts  integrator.ts  jsonExtract.ts  loop.ts  mechanicalGate.ts  processTree.ts  publisher.ts  redaction.ts  scheduler.ts  watchdog.ts
src/notify/: telegram.ts
src/observability/: events.ts  instrument.ts  trace.ts  usage.ts
src/schemas/: plan.ts  (+2 more)
test/: cliRunner.test.ts  config.test.ts  critic.test.ts  git.test.ts  httpRunner.test.ts  hub.test.ts  integrator.test.ts  jsonExtract.test.ts  loop.test.ts  mechanicalGate.test.ts  observability.test.ts  piAgentCompaction.test.ts  piAgentRunner.test.ts  publisher.test.ts  redaction.test.ts  responsesRunner.test.ts  resume.test.ts  roleBindings.test.ts  runnerRoles.test.ts  scheduler.test.ts  server.test.ts  session.test.ts  sessionPublish.test.ts  stateMachine.test.ts  store.test.ts  telegram.test.ts  watchdog.test.ts  worktrees.test.ts
(+18 files in other folders)
